docs(legal): add content responsibility section to Impressum
Added the "Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV" section to impressum.html. This identifies Maria Brandenstein as the person responsible for editorial content to ensure the legal notice complies with German regulatory requirements.

--- a/impressum.html
+++ b/impressum.html
@@ -46,6 +46,11 @@
                 <h2>Praxisanschrift:</h2>
                 <p>Ulrichsgasse 1<br>
                 86150 Augsburg</p>
+
+                <h2>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV (V.i.S.d.P.):</h2>
+                <p><strong>Maria Brandenstein</strong><br>
+                Ulrichsgasse 1<br>
+                86150 Augsburg</p>
                 
                 <h2>Kontakt:</h2>
                 <p>Telefon: 0821-328 77 11<br>
