docs: update contact information and remove outdated content
This commit updates the contact details and streamlines the website content:
- Updated the office address, phone number, and email address in both the legal notice (Impressum) and privacy policy (Datenschutz) pages.
- Added specific contact person details to the data processing section of the privacy policy.
- Removed the "ProfilPASS-Beratung" service card and the "Rückblick & Meilensteine" (Timeline) section from the homepage to reflect current offerings.

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -42,7 +42,7 @@
                 <p>Die folgenden Hinweise geben einen einfachen Überblick darüber, was mit Ihren personenbezogenen Daten passiert, wenn Sie diese Website besuchen. Personenbezogene Daten sind alle Daten, mit denen Sie persönlich identifiziert werden können.</p>
                 
                 <h2>2. Datenerfassung auf unserer Website</h2>
-                <p>Die Datenverarbeitung auf dieser Website erfolgt durch den Websitebetreiber. Dessen Kontaktdaten können Sie dem Impressum dieser Website entnehmen.</p>
+                <p>Die Datenverarbeitung auf dieser Website erfolgt durch den Websitebetreiber. Dessen Kontaktdaten (Maria Brandenstein, brandenstein@posteo.de) können Sie dem Impressum dieser Website entnehmen.</p>
                 <p>Ihre Daten werden zum einen dadurch erhoben, dass Sie uns diese mitteilen. Hierbei kann es sich z. B. um Daten handeln, die Sie in ein Kontaktformular eingeben oder per E-Mail senden.</p>
                 
                 <h2>3. Hosting</h2>
