--- a/index.html
+++ b/index.html
@@ -87,11 +87,6 @@
                         <h4>Lernförderung Mathematik</h4>
                         <p>Individuelle Unterstützung für Schülerinnen und Schüler mit Lücken oder besonderen mathematischen Begabungen.</p>
                     </article>
-                    <article class="service-card">
-                        <div class="service-icon">📝</div>
-                        <h4>ProfilPASS-Beratung</h4>
-                        <p>Stärken und Kompetenzen sichtbar machen – ein systematisches Verfahren für Jugendliche und Erwachsene.</p>
-                    </article>
                 </div>
             </div>
         </section>
@@ -142,45 +137,6 @@
             </div>
         </section>
 
-        <section id="projekte" class="projekte">
-            <div class="container">
-                <h2 class="section-title">Rückblick & Meilensteine</h2>
-                <div class="timeline">
-                    <div class="timeline-item">
-                        <div class="timeline-dot"></div>
-                        <div class="timeline-content">
-                            <span class="date">2015 – 2016</span>
-                            <h4>Augsburger Begabungstage</h4>
-                            <p>Organisation des 1. und 2. Begabungstags – eine Plattform für Eltern, Experten und Pädagogen zur Vernetzung und Wissensvermittlung.</p>
-                        </div>
-                    </div>
-                    <div class="timeline-item">
-                        <div class="timeline-dot"></div>
-                        <div class="timeline-content">
-                            <span class="date">Highlight</span>
-                            <h4>Vortrag Prof. El-Mafaalani</h4>
-                            <p>Einladung des renommierten Soziologen zum Thema „Armut und Begabung“ – ein bedeutender Impuls für die lokale Bildungslandschaft.</p>
-                        </div>
-                    </div>
-                    <div class="timeline-item">
-                        <div class="timeline-dot"></div>
-                        <div class="timeline-content">
-                            <span class="date">Netzwerk</span>
-                            <h4>Netzwerk (Hoch)Begabung</h4>
-                            <p>Aufbau nachhaltiger Strukturen für Fachkräfte und Eltern in Augsburg zur Förderung von Potentialen.</p>
-                        </div>
-                    </div>
-                    <div class="timeline-item">
-                        <div class="timeline-dot"></div>
-                        <div class="timeline-content">
-                            <span class="date">Vision</span>
-                            <h4>ViA – Stadtentwicklung</h4>
-                            <p>Beitrag zum Stadtentwicklungskonzept: „ViA – Der Weg zur Förderung von Begabung und Persönlichkeit“.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
 
         <section id="kontakt" class="kontakt">
             <div class="container">
@@ -189,16 +145,16 @@
                     <div class="kontakt-info">
                         <p>Ich stehe Ihnen gerne mit meinem Fachwissen und meiner Erfahrung zur Seite. Am besten erreichen Sie mich per E-Mail für eine Terminvereinbarung.</p>
                         <div class="contact-details">
-                            <p><strong>Telefon:</strong> <a href="tel:+498213287711">0821-328 77 11</a></p>
-                            <p><strong>E-Mail:</strong> <a href="mailto:begabung@online.de">begabung@online.de</a></p>
-                            <p><strong>Anschrift:</strong><br>Ulrichsgasse 1<br>86150 Augsburg</p>
+                            <p><strong>Telefon:</strong> <a href="tel:+4915231868971">+49 152 31868971</a></p>
+                            <p><strong>E-Mail:</strong> <span class="protected-email" data-mailto="true">brandenstein(at)posteo.de</span></p>
+                            <p><strong>Anschrift:</strong><br>Provinostraße 52<br>Martinipark<br>V1_3 Untergeschoss Archiv 5<br>86153 Augsburg</p>
                         </div>
                     </div>
                     <div class="kontakt-cta">
                         <div class="cta-box">
                             <h4>Interessiert an einem Termin?</h4>
                             <p>Schreiben Sie mir einfach eine kurze Nachricht mit Ihrem Anliegen.</p>
-                            <a href="mailto:begabung@online.de" class="btn">E-Mail schreiben</a>
+                            <span class="protected-email btn" data-mailto="true">E-Mail schreiben</span>
                         </div>
                     </div>
                 </div>
